# mufasa

./: CHANGELOG.md  MANIFEST.in  PKG-INFO  PLAN_native_qt_drawing.md  README.md  csv_subtree_removal_audit.md  cython_full_kernel_port.patch  cython_inside_polygon_poc.patch  cython_kernel_wiring.patch  feature_family_enum.patch  feature_init_run_split.patch  feature_orchestration_extract.patch  feature_parallelization.patch  hull_area_modulo_fix.patch  hull_parallel_rewrite.patch  likelihood_mask_suffix_fix.patch  mufasa_launcher.patch  numba_cache_fix.patch  project_tree.txt  pyproject.toml  qt_n_workers_spinbox.patch  session_handoff.md  setup.py  workbench_auto_discover.patch
docs/: README.md  audit_v2_pipeline.py  backend_audit.md  data_source_guides.md  hardwired_paths_audit.md  kalman_smoother_design.md  lint_status.md  migration_guide.md  qt_form_registration_audit.md  qt_form_runtime_gaps.md  qt_workbench_known_issues.md  roi_enhancements_proposal.md  simba_death_cascade.md  stage_b_checklist.md  testing_workflow.md  tk_surface_audit.md  tk_to_qt_consolidation_plan.md  v1_project_layout.md  v2_next_steps_design.md  v2_pipeline_audit.txt  workflow_audit.md  workflow_recipes.md  workflows.md
mufasa/: SimBA.py  __init__.py  legacy_layout.py  project_layout.py
mufasa/_native/: __init__.py  angle3pt.c  angle3pt.pyx  border_distances.c  border_distances.pyx  euclidean_distance.c  euclidean_distance.pyx  hull.c  hull.pyx  inside_circle.c  inside_circle.pyx  inside_polygon.c  inside_polygon.pyx  inside_rectangle.c  inside_rectangle.pyx
mufasa/bounding_box_tools/: agg_boundary_stats.py  boundary_menus.py  boundary_statistics.py  find_boundaries.py  visualize_boundaries.py
mufasa/cli/: __init__.py  migrate_project.py  workbench_launcher.py
mufasa/cue_light_tools/: cue_light_analyzer.py  cue_light_clf_statistics.py  cue_light_main_popup.py  cue_light_movement_statistics.py  cue_light_tools.py  cue_light_visualizer.py
mufasa/data_processors/: advanced_interpolator.py  advanced_smoothing.py  agg_clf_calculator.py  agg_clf_counter_mp.py  blob_location_computer.py  boolean_conditional_calculator.py  circling_detector.py  circular_dispatch.py  cue_light_analyzer.py  cue_light_clf_statistics.py  cue_light_movement_statistics.py  directing_animal_to_bodypart.py  directing_other_animals_calculator.py  distance_calculator.py  distance_timbin_calculator.py  egocentric_aligner.py  find_animal_blob_location.py  freezing_detector.py  fsttc_calculator.py  gibbs_sampler.py  interpolate.py  interpolate_pose.py  interpolation_smoothing.py  kalman_diagnostic.py  kalman_pose_smoother.py  kalman_pose_smoother_v2.py  kleinberg_calculator.py  light_dark_box_analyzer.py  movement_calculator.py  mutual_exclusivity_corrector.py  pup_retrieval_calculator.py  pybursts_calculator.py  severity_bout_based_calculator.py  severity_calculator.py  severity_frame_based_calculator.py  smoothing.py  spontaneous_alternation_calculator.py  timebins_clf_calculator.py  timebins_movement_calculator.py  timebins_movement_calculator_mp.py  (+1 more)
mufasa/feature_extractors/: aggression_feature_extractor.py  amber_feature_extractor.py  boundary_rearing_analyzer.py  cave_fish_featurizer.py  feature_extractor_14bp.py  feature_extractor_16bp.py  feature_extractor_4bp.py  feature_extractor_7bp.py  feature_extractor_8bp.py  feature_extractor_8bps_2_animals.py  feature_extractor_9bp.py  feature_extractor_user_defined.py  feature_subset_kernels.py  feature_subset_orchestration.py  feature_subsets.py  gerbil_featurizer.py  mitra_feature_extractor.py  perimeter_jit.py  rat_social_featurizer.py  riptortus_featurizer.py  straub_tail_analyzer.py  wingwave_extractor.py
mufasa/labelling/: extract_labelled_frames.py  extract_labelling_meta.py  labelling_advanced_interface.py  labelling_interface.py  mitra_style_appender.py  play_annotation_video.py  single_clf_appender_excel.py  standard_labeller.py  targeted_annotations_clips.py
mufasa/mixins/: __init__.py  annotator_mixin.py  circular_statistics.py  config_reader.py  feature_extraction_mixin.py  feature_extraction_supplement_mixin.py  geometry_mixin.py  image_mixin.py  network_mixin.py  plotting_mixin.py  pop_up_mixin.py  pose_importer_mixin.py  statistics_mixin.py  timeseries_features_mixin.py  train_model_mixin.py  unsupervised_mixin.py
mufasa/model/: grid_search_multiclass_rf.py  grid_search_rf.py  inference_batch.py  inference_multiclass_batch.py  inference_validation.py  ordinal_clf.py  train_rf.py  (+9 more)
scripts/: benchmark_circular_stats.py  e2e_canary.py  osf_download.py  per_session_offset_diagnostic.py  strip_to_pose.py  upgrade_simba_keep_configs.py
tests/: e2e_121d_smoke.py  smoke_122ae1_parquet_foundation.py  smoke_122ae2_feature_io.py  smoke_122ae35_label_io.py  smoke_122ae3_per_family_writer.py  smoke_122ae4_wide_parquet.py  smoke_122ae5_consumer_migration.py  smoke_122ae5b_non_labeller_readers.py  smoke_122ae5c_label_writes.py  smoke_122ae5d_tk_continue_mode.py  smoke_122ae5e_classifier_training.py  smoke_122ae6_csv_export.py  smoke_122ag_hotfix.py  smoke_122ah_targeted_clips.py  smoke_122ai_roi_logic.py  smoke_122aj_dockable_labeller.py  smoke_122ak_v1_native.py  smoke_122al_batch_pre_process_qt.py  smoke_122an_dead_code_removal.py  smoke_122ao_layout_helper_cleanup.py  smoke_122ap_run_inference_qt.py  smoke_122aq_train_classifier_qt.py  smoke_122ar_validate_classifier_qt.py  smoke_122as_classifier_settings_toml.py  smoke_122at_classifications_v1_io.py  smoke_122au_analysis_consumer_migration.py  smoke_122av_visualization_consumer_migration.py  smoke_122aw_labelling_consumer_migration.py  smoke_122ax_close_out_machine_results.py  smoke_122ay_mp_worker_migration.py  smoke_122az_viz_form_route_additions.py  smoke_122bc_csv_subtree_audit_b4.py  smoke_122bd_docstring_harmonisation.py  smoke_122be_list_kind_for_viz_form.py  smoke_122bg_dict_kind_for_viz_form.py  smoke_122bh_pickle_kind_for_viz_form.py  smoke_122bi_migrate_cuelight_spontaneous_to_list_kind.py  smoke_122bj_dev_test_footer_sweep.py  smoke_122bl_code_cleanup_pass.py  smoke_122bm_simba_to_mufasa_rebrand_phase1.py  (+142 more)
(+413 files in other folders)
